                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-12-2005 added: HttpApi FileSize and SetResponseFormat commands
 - 17-12-2005 added: SmartXX V3 LCD , RGB&Status LED Support
 - 17-12-2005 added: system.autodetection, XBMC.ActivateWindow(3,autodetection),  Skinning indication icon/button to connect to a Autodetected XBOX!
 - 17-12-2005 changed: XBOX Autodetection, little more tweaks
 - 16-12-2005 fixed: IMDB thumbs for stacked hard drive items
 - 16-12-2005 fixed: Music and Video Now Playing windows now have a correct context menu
 - 16-12-2005 changed: video stacking cd selector bypass is now configurable, found in settings ->  my video -> video player
 - 16-12-2005 added: Built in command XBMC.TakeScreenShot thanks to Donno
 - 16-12-2005 changed: the video stacked-cd selector dialog will choose the first file after 60 seconds
 - 16-12-2005 fixed: IMDB lookup of plotsummary when a "Title?tt#######" url is in the nfo file
 - 15-12-2005 fixed: [ 1380351 ] Autoshutdown if slideshow screensaver is activated
 - 15-12-2005 fixed: Progress dialog could stay on screen after a calling up the shoutcast list via the webserver.
 - 15-12-2005 added: XBMC.PlayerControl(BigSkipForward), BigSkipBackward, SmallSkipForward and SmallSkipBackward built in functions.
 - 15-12-2005 changed: Skin version updated to 1.85 (version 1.3 skins still run, but skinners need to update)
 - 15-12-2005 updated: German language file
 - 15-12-2005 updated: Spanish language file (Thnx to traxis)
 - 15-12-2005 updated: Italian language file (Thnx to kotix)
 - 15-12-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 15-12-2005 updated: Korean language file (Thnx to AkoXko)