@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-12-2005 fixed: MP3 files with more than one ID3v2 tag at the beginning would fail to play.
+ - 18-12-2005 fixed: M3U reading could buffer overflow in the charset conversion.
  - 18-12-2005 added: HttpApi FileSize and SetResponseFormat commands
  - 17-12-2005 added: SmartXX V3 LCD , RGB&Status LED Support
  - 17-12-2005 added: system.autodetection, XBMC.ActivateWindow(3,autodetection),  Skinning indication icon/button to connect to a Autodetected XBOX!
